README*: Document necessary options when running through java
See https://lists.sr.ht/~bzg/woof/%3C87a630dflv.fsf%40bzg.fr%3E